2021-09-26
Add make commands to compile, install modules and headers.
Add commands to install initrd and vmlinuz to efi dir.
Add installdir variables.